--- a/PedidoFacil/PedidoFacil/PedidoFacil/PedidoFacil.csproj
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/PedidoFacil.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SuaveControls.FloatingActionButton" Version="2018.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
