Cria página para adicionar pedido com picker para selecionar cliente e adiciona imagem +

--- a/PedidoFacil/PedidoFacil/PedidoFacil/PedidoFacil.csproj
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/PedidoFacil.csproj
@@ -18,6 +18,9 @@
     <EmbeddedResource Update="Controls\ExpandableView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AddPedidosPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AgendaPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
