--- a/PedidoFacil/PedidoFacil/PedidoFacil.Android/PedidoFacil.Android.csproj
+++ b/PedidoFacil/PedidoFacil/PedidoFacil.Android/PedidoFacil.Android.csproj
@@ -99,5 +99,8 @@
       <Name>PedidoFacil</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\plus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
