--- a/PedidoFacil/PedidoFacil/PedidoFacil.iOS/PedidoFacil.iOS.csproj
+++ b/PedidoFacil/PedidoFacil/PedidoFacil.iOS/PedidoFacil.iOS.csproj
@@ -201,5 +201,8 @@
       <Name>PedidoFacil</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\plus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
